binutils/testsuite/binutils-all/x86-64/pr23494b-x32.d
@@ -1,0 +1,5 @@
+#source: pr23494a.s
+#PROG: objcopy
+#as: --x32
+#objcopy: -O elf64-x86-64 -R .note.gnu.property
+#readelf: -n
